kubernetes/apps/home/sprinkler/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: sprinkler-service
  namespace: home
subsets:
- addresses:
  - ip: 192.168.4.117
  ports:
  - port: 8080
    name: http
