kubernetes/apps/home/sprinkler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprinkler-service-ingress
  namespace: home
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external
  rules:
  - host: sprinkler.gitlab.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sprinkler-service
            port:
              name: http
